fix: update/delete methods & auth fix 2
