# internal/entity/module.go
@@ -23,11 +23,11 @@ type NewModule struct {
 } // @name NewModule
 
 type ModuleUpdateBody struct {
-	ID              uuid.UUID `db:"course_id" json:"courseId" validate:"required"`
+	ID              uuid.UUID `db:"id" json:"id" validate:"required"`
 	Name            *string   `db:"name" json:"name"`
 	Content         *string   `db:"content" json:"content"`
 	DurationMinutes *int64    `db:"duration_minutes" json:"durationMinutes"`
-}
+} // @name ModuleUpdateBody
 
 type ModuleFilters struct {
 	ID       uuid.UUID `db:"id" json:"id"`
